# learning_cpp

./: .gitignore  CMakeLists.txt  README.md  ex1_01.cpp  exercise_1_1.cpp  exercise_1_2.cpp  exercise_1_3.cpp  justfile  main.cpp
alias/: README.md  main.cpp
array/: main  main.cpp
bmi_calculator/: CmakeLists.txt
bmi_calculator/src/: mian.c++
bmi_calculator/ui/: main.slint
build_source/: main
cmath/: README.md  main.cpp
cpp_23/: CMakeCache.txt  CMakeLists.txt  foo.cpp  main.cpp
datatypes/: README.md  main.cpp
enum/: README.md  main.cpp
exercise_2_1/: README.md  main.cpp
exercise_2_2/: README.md  main.cpp
exercise_2_3/: README.md  main.cpp
exercise_2_4/: README.md  main.cpp
hello_world/: README.md
limit/: README.md  main.cpp
loops/: main.cpp
stream_output/: README.md  main.cpp
typecast/: README.md  main.cpp
variables/: README.md  main.cpp
